--- a/src/components/nav.module.css
+++ b/src/components/nav.module.css
@@ -1,6 +1,33 @@
 .navbar {
   width: 100%;
+  height: 80px;
   display: flex;
   justify-content: space-around;
-  background-color: aquamarine;
+  align-items: center;
+  background-color: #fffb06;
+}
+.navbar a {
+  text-decoration: none;
+  color: #c13ae2;
+  font-size: 1.2em;
+  font-family: "Trebuchet MS", "Lucida Sans Unicode", "Lucida Grande",
+    "Lucida Sans", Arial, sans-serif;
+  font-weight: bold;
+}
+
+.navbar a:hover {
+  color: #9104b4;
+}
+.logo {
+  width: 400px;
+  height: 100%;
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
+}
+
+.logo h1 {
+  color: #9104b4;
+  font-family: "Trebuchet MS", "Lucida Sans Unicode", "Lucida Grande",
+    "Lucida Sans", Arial, sans-serif;
 }
