--- a/src/styles/nav.module.css
+++ b/src/styles/nav.module.css
@@ -4,7 +4,7 @@
   display: flex;
   justify-content: space-around;
   align-items: center;
-  background-color: #fffb06;
+  background-color: #facd03;
 }
 .navbar a {
   text-decoration: none;
@@ -19,7 +19,7 @@
   color: #9104b4;
 }
 .logo {
-  width: 400px;
+  width: 450px;
   height: 100%;
   display: flex;
   justify-content: space-around;
