--- a/src/styles/category.module.css
+++ b/src/styles/category.module.css
@@ -18,6 +18,6 @@
 }
 
 .quizCategories button:hover {
-  background: linear-gradient(to left, #ad07ad, #eca3ec);
+  background: linear-gradient(to left, #ad07ad, #eeacee);
   color: #facd03;
 }
